# binaryen-sys

./: .gitignore  Cargo.toml  README.md  build.rs
src/: bindings.rs
tests/: bindgen-up-to-date.rs
